--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   ],
   "scripts": {
     "build:core": "yarn --cwd packages/core build",
-    "build:react": "yarn --cwd packages/react build",
-    "build": "yarn build:core && yarn build:react"
+    "build": "yarn build:core"
   }
 }
